# blog

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yaml
.github/workflows/: ci.yml
2023/12/29/papermerge-30/: index.html
2024/01/14/papermerge-301-release/: index.html
2024/01/21/302-release/: index.html
2024/01/21/papermerge-302-release/: index.html
2024/02/02/303-release/: index.html
2024/02/02/303-releasehttpsgithubcompapermergepapermerge-corereleasestag303/: index.html
2024/02/23/31-release/: index.html
2024/04/07/oidc-support-is-here/: index.html
2024/10/10/updates/: index.html
2024/11/28/lets-play-with-release-33/: index.html
2024/12/21/release-33/: index.html
2025/01/19/demo-instance-is-back/: index.html
2025/05/01/release-35/: index.html
archive/2023/: index.html
archive/2024/: index.html
archive/2025/: index.html
category/announcement/: index.html
category/news/: index.html
category/papermerge3/: index.html
docs/: CNAME  index.md
docs/blog/posts/: hello.md  hello2.md
docs/posts/: 0011-release-3-3-1-and-other-updates.md  0012-release-3-4.md  0013-release-3-5.md  0014-support-for-postgres.md  01-announcement.md  02-announcement-3.0.1.md  03-annoucement-3-0-2.md  03-deploy-with-ansible.md  04-announcement-3-0-3.md  05-announcement-3-1.md  06-announcement-3-2.md  07-next-releases.md  08-play-with-3.3.md  09-release-3-3.md
page/2/: index.html
search/: search_index.json
site/: index.html
site/archive/2024/: index.html
site/search/: search_index.json
(+2 files in other folders)
