[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Papermerge blog"
authors = ["Eugen Ciur <eugen@papermerge.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mkdocs = "^1.6"
mkdocs-blog-plugin = "^0.25"
mkdocs-material = "^9.7"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
server = "mkdocs serve"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
